--- a/src/component/login/login.css
+++ b/src/component/login/login.css
@@ -1,11 +1,12 @@
-/* login.css */
-.login-wrapper {
+ 
+ .login-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   background: linear-gradient(135deg, #6a11cb, #2575fc);
   padding: 20px;
+  background-color: red;
 }
 
 .login-box {
@@ -106,6 +107,6 @@
     font-size: 15px;
     padding: 12px;
   }
-}
+} 
 
-  
+   
