--- a/src/component/profile/profile.css
+++ b/src/component/profile/profile.css
@@ -21,10 +21,11 @@
   width: 100%;
   background-color: #f4f4f4;
   padding: 10px 0;
-  position: fixed;
+
   bottom: 0;
   left: 0;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  
   z-index: 100; /* Sikrer at sidebar vises foran innholdet */
 }
 
@@ -108,6 +109,7 @@
   padding: 10px;
   background-color: #ffffff;
   border-radius: 4px;
+ 
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -138,18 +140,6 @@
     padding: 15px 0;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* ProfileEdit */
@@ -221,8 +211,8 @@
   width: 100%;
   padding: 10px;
   border-radius: 4px;
-  border: 1px solid #d1d1d1;
-  background-color: #ffffff;
+  border: 1px solid lightblue;
+  background-color: whitesmoke;
   transition: border-color 0.2s ease-in-out;
 }
 
@@ -243,7 +233,7 @@
 .profile-row button {
   width: 100%;
   padding: 10px 20px;
-  background-color: #007aff;
+  background-color: lightblue;
   color: #ffffff;
   border: none;
   border-radius: 4px;
@@ -268,6 +258,7 @@
 .button-group {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 10px;
   margin-top: 20px;
 }
@@ -319,4 +310,15 @@
   .cancel-button {
     width: auto;
   }
+}
+
+
+/* about me */
+
+-about-container{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
 }
